--- a/creativemedia/live/donelfantasticTV.html
+++ b/creativemedia/live/donelfantasticTV.html
@@ -300,7 +300,7 @@ var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "
   const clapprConfig = {
     title: "DonelfantasticTV",
     poster: "",
-    source: ABCDEFGHIJKLM + stream_url,
+    source: stream_url,
             abr: {
     enabled: true
        }, 
