--- a/creativemedia/live/donelfantasticTV.html
+++ b/creativemedia/live/donelfantasticTV.html
@@ -186,7 +186,7 @@ a:hover {
     </div>
     <nav class="my-nav">
       <ul>
-        <li class="my-tv"><a href="/">MENU<i class="fa fa-list" aria-hidden="true"></i></a></li>
+        <li class="my-tv"><a href="//donelfantastic.github.io/creativemedia/live/">MENU<i class="fa fa-list" aria-hidden="true"></i></a></li>
       </ul>
     </nav>    
     <div class="container-fluid">
