--- a/creativemedia/live/donelfantasticTV2.html
+++ b/creativemedia/live/donelfantasticTV2.html
@@ -178,7 +178,7 @@
   </script>
 </head>
 
-<body oncontextmenu="return false;">
+<body oncontextmenu="return false" onkeydown="return false" onmousedown="return false">
   <div class="wrapper">
     <div id="banner">
       <center>
