--- a/creativemedia/live/donelfantasticTV.html
+++ b/creativemedia/live/donelfantasticTV.html
@@ -173,7 +173,7 @@ a:hover {
     });
 </script>
 </head>
-<body oncontextmenu="return false;">
+<body oncontextmenu="return false" onkeydown="return false" onmousedown="return false">
   <div class="wrapper">
     <div id="banner">
       <center>
