--- a/creativemedia/tv/donelfans2022.html
+++ b/creativemedia/tv/donelfans2022.html
@@ -328,7 +328,7 @@ var ZXCVBNM = atob("aHR0cHM6Ly9jb3JzcHJveHkucGxlbnR5Z3JhbS5jb20v");
   const clapprConfig = {
     title: "",
     poster: "",
-    source: stream_url,
+    source: atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv") + stream_url,
             abr: {
     enabled: true
        }, 
