--- a/creativemedia/live/donelfantasticTV2.html
+++ b/creativemedia/live/donelfantasticTV2.html
@@ -316,12 +316,13 @@
         servers: QWERTY123
       }
     });
+    var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv");
     window.player = player;
     window.ui = ui;
     player.addEventListener("error", onPlayerErrorEvent);
     controls.addEventListener("error", onUIErrorEvent);
     try {
-      await player.load(stream_url);
+      await player.load(MLKJIHGFEDCBA2 + stream_url);
       console.log("The video has now been loaded!");
     } catch (error) {
       onPlayerError(error);
