--- a/creativemedia/live/donelfantasticTV.html
+++ b/creativemedia/live/donelfantasticTV.html
@@ -294,13 +294,14 @@ var NOPQRSTUVWXYZ = NOPQRSTUVWXYZ
 var QWERTYUIOP = QWERTYUIOP;
 var ASDFGHJKL = ASDFGHJKL;
 document.addEventListener("DOMContentLoaded", () => {
-  const players = document.querySelectorAll("#player");
+const players = document.querySelectorAll("#player");
 var currentLocation = window.location.search;
-var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", ""); 
+var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
+var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv");  
   const clapprConfig = {
     title: "DonelfantasticTV",
     poster: "",
-    source: stream_url,
+    source: MLKJIHGFEDCBA2 + stream_url,
             abr: {
     enabled: true
        }, 
