--- a/creativemedia/tv/donelfans2022.html
+++ b/creativemedia/tv/donelfans2022.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
     <script src="/cdn-cgi/apps/head/aqhzBqkyhgXFT9tYquvCBE2xpuY.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script type="text/javascript" src="histats.min.js"></script>
   <script async src="/cdn-cgi/challenge-platform/h/g/scripts/invisible.js?cb=6ebfddfd6fa3499c"></script>
 
 <style>
@@ -306,8 +307,12 @@ company-name, p {
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@clappr/hlsjs-playback@latest/dist/hlsjs-playback.min.js"></script>
 <script type="text/javascript" src="https://encrypt2.skycdn.ga/udp/Counter"></script>
 <script type="text/javascript">
+var ABCDEFGHIJKLM = ABCDEFGHIJKLM; 
+var NOPQRSTUVWXYZ = NOPQRSTUVWXYZ
+var QWERTYUIOP = QWERTYUIOP;
+var ASDFGHJKL = ASDFGHJKL;
 document.addEventListener("DOMContentLoaded", () => {
-  const players = document.querySelectorAll("#player");
+const players = document.querySelectorAll("#player");
   //let playingInstance = null;
 /*const setQueryParameter = (param: string) => () => {
   const qs = querystring.parse(window.location.search.replace(/\?/, ""));
@@ -324,24 +329,18 @@ document.addEventListener("DOMContentLoaded", () => {
   
 var currentLocation = window.location.search;
 var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", ""); 
-var ZXCVBNM = atob("aHR0cHM6Ly9jb3JzcHJveHkucGxlbnR5Z3JhbS5jb20v");  
-  const clapprConfig = {
-    title: "",
+var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv");     
+const clapprConfig = {    
+    title: "DonelfantasticTV",
     poster: "",
-    source: atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv") + stream_url,
+    source: MLKJIHGFEDCBA2 + stream_url,
             abr: {
     enabled: true
        }, 
     shakaConfiguration: {
       drm: {
-        servers: {
-          "com.widevine.alpha": ZXCVBNM + "https://mrpw.ptmnc01.verspective.net/?deviceId=YzM0NDA0MTItMGYyMC0zNGQ0LTliMjMtNDY4MjE1ZjA5NmZj",        
-          "com.microsoft.playready": ""
-        },
-        clearKeys :{
-         "82f8e2a17dac44c0a18f660479349c59": "1b144f73e6fefe91cd05f850e2b589d0", //dzn
-         "cfb5e2b73bef4f3c878f25ab86a7451f":"0d6712bf2a84edcc93d001a9613f6fec"
-          }
+        servers: QWERTYUIOP,        
+        clearKeys :ASDFGHJKL
       }
     },
     autoPlay: "auto", 
