--- a/creativemedia/tv/donelfans2022.html
+++ b/creativemedia/tv/donelfans2022.html
@@ -325,7 +325,7 @@ const clapprConfig = {
        }, 
     shakaConfiguration: {
       drm: {
-        servers: QWERTY123        
+        servers: QWERTY123,        
         clearKeys : ASDFGHJKL
       }
     },
