--- a/creativemedia/tv/index.html
+++ b/creativemedia/tv/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all">
-  <link rel="stylesheet" href="src/style.css">
+  <link rel="stylesheet" href="src/style.min.css">
 </head>
 <body oncontextmenu="return false;">
   <div class="wrapper">
@@ -57,13 +57,14 @@
       <a id="programm" href="https://youtube.com/@donelfantastic"><i class="fa-brands fa-youtube"></i></a>
     </div>
     <p class="company-name">Donelfantastic &copy; 2023-2024, ALL Rights Reserved.</p>
-  <center><tr><div id="histats_counter" style="display: none;"></div></tr></center>
+//  <center><tr><div id="histats_counter" style="display: none;"></div></tr></center>
   </footer>
 </body>
-<script  src="src/script.js"></script>
+<script  src="src/script.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script>
+/*
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4767523,4,19,200,40,00011111']);
@@ -76,4 +77,5 @@ hs.src = ('//s10.histats.com/js15_as.js');
 })();</script>
 <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4767523&101" alt="website free tracking" border="0"></a></noscript>
 <!-- Histats.com  END  -->
+*/
   </html>
