--- a/creativemedia/tv/index.html
+++ b/creativemedia/tv/index.html
@@ -56,7 +56,7 @@
       <a id="create" href="https://instagram.com/donelfantastic"><i class="fa-brands fa-instagram"></i></a>
       <a id="programm" href="https://youtube.com/@donelfantastic"><i class="fa-brands fa-youtube"></i></a>
     </div>
-    <p class="company-name">Donelfantastic &copy; 2023-2024, ALL Rights Reserved.</p>
+    <p class="company-name">Donel Fantastic &copy; 2023, ALL Rights Reserved.</p>
   <center><tr><div id="histats_counter" style="display: none;"></div></tr></center>
   </footer>
 </body>
@@ -66,7 +66,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script>
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4767523,4,19,200,40,00011111']);
+_Hasync.push(['Histats.start', '1,4767285,4,19,200,40,00010000']);
 _Hasync.push(['Histats.fasi', '1']);
 _Hasync.push(['Histats.track_hits', '']);
 (function() {
@@ -74,6 +74,6 @@ var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async
 hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4767523&101" alt="website free tracking" border="0"></a></noscript>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4767285&101" alt="web counter" border="0"></a></noscript>
 <!-- Histats.com  END  -->
   </html>
