--- a/creativemedia/tv/donelfantasticTV.html
+++ b/creativemedia/tv/donelfantasticTV.html
@@ -280,7 +280,7 @@ company-name, p {
     <a id="create" href="https://instagram.com/donelfantastic"><i class="fa-brands fa-instagram"></i></a>
     <a id="programm" href="https://youtube.com/@donelfantastic"><i class="fa-brands fa-youtube"></i></a>
   </div>
-  <p class="company-name">Donelfantastic &copy; 2023-2024, ALL Rights Reserved.</p>
+  <p class="company-name">Donel Fantastic &copy; 2023, ALL Rights Reserved.</p>
 </footer>
 </body>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
