--- a/creativemedia/tv/donelfantasticTV2.html
+++ b/creativemedia/tv/donelfantasticTV2.html
@@ -292,7 +292,7 @@
       <a id="create" href="https://instagram.com/donelfantastic"><i class="fa-brands fa-instagram"></i></a>
       <a id="programm" href="https://youtube.com/@donelfantastic"><i class="fa-brands fa-youtube"></i></a>
     </div>
-    <p class="company-name">Donelfantastic &copy; 2023-2024, ALL Rights Reserved.</p>
+    <p class="company-name">Donel Fantastic &copy; 2023, ALL Rights Reserved.</p>
   </footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mux.js/6.3.0/mux.min.js"></script>
