--- a/creativemedia/live/donelfantastic.html
+++ b/creativemedia/live/donelfantastic.html
@@ -289,10 +289,10 @@ company-name, p {
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@clappr/hlsjs-playback@latest/dist/hlsjs-playback.min.js"></script>
 <script type="text/javascript" src="https://encrypt2.skycdn.ga/udp/Counter"></script>
 <script type="text/javascript">
-var ABCDEFGHIJKLM = ABCDEFGHIJKLM; 
-var NOPQRSTUVWXYZ = NOPQRSTUVWXYZ
-var QWERTYUIOP = QWERTYUIOP;
-var ASDFGHJKL = ASDFGHJKL;
+//var ABCDEFGHIJKLM = ABCDEFGHIJKLM; 
+//var NOPQRSTUVWXYZ = NOPQRSTUVWXYZ
+//var QWERTYUIOP = QWERTYUIOP;
+//var ASDFGHJKL = ASDFGHJKL;
 document.addEventListener("DOMContentLoaded", () => {
 const players = document.querySelectorAll("#player");
 var currentLocation = window.location.search;
