--- a/creativemedia/live/donelfantastic.html
+++ b/creativemedia/live/donelfantastic.html
@@ -301,7 +301,7 @@ var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "
 var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv");  
   const clapprConfig = {
     title: "DonelfantasticTV",
-    poster: "",
+    poster: "assets/poster.gif",
     source: MLKJIHGFEDCBA2 + stream_url,
             abr: {
     enabled: true
@@ -332,7 +332,7 @@ var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6X
         return customLabel + playbackLevel.level.height + "p"; // High 720p
       }
     },
-    watermark: "",
+    watermark: "assets/logo.png",
     position: "bottom-left",
     shakaOnBeforeLoad: function (shaka_player) {}
   };
