--- a/creativemedia/tv/donelfantasticTV.html
+++ b/creativemedia/tv/donelfantasticTV.html
@@ -298,7 +298,7 @@ const players = document.querySelectorAll("#player");
 var currentLocation = window.location.search;
 var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
 var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv");  
-var MLKJIHGFEDCBA3 = "https://cors1.donelfantastic.workers.dev:443/";  
+var MLKJIHGFEDCBA3 = "https://cors1.donelfantastic.workers.dev/";  
   const clapprConfig = {
     title: "DonelfantasticTV",
     poster: "",
