--- a/creativemedia/tv/donelfantasticTV2.html
+++ b/creativemedia/tv/donelfantasticTV2.html
@@ -316,8 +316,8 @@
         servers: QWERTY123
       }
     });
-    var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv");
-    var MLKJIHGFEDCBA3 = "https://cors1.donelfantastic.workers.dev/";
+    //var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv");
+    //var MLKJIHGFEDCBA3 = "";
     window.player = player;
     window.ui = ui;
     player.addEventListener("error", onPlayerErrorEvent);
