--- a/creativemedia/tv/donelfantasticTV.html
+++ b/creativemedia/tv/donelfantasticTV.html
@@ -302,7 +302,7 @@ var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "
   const clapprConfig = {
     title: "DonelfantasticTV",
     poster: "",
-    source: MLKJIHGFEDCBA3 + stream_url,
+    source: stream_url,
             abr: {
     enabled: true
        }, 
