--- a/creativemedia/tv/donelfans2022.html
+++ b/creativemedia/tv/donelfans2022.html
@@ -307,19 +307,19 @@ company-name, p {
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@clappr/hlsjs-playback@latest/dist/hlsjs-playback.min.js"></script>
 <script type="text/javascript" src="https://encrypt2.skycdn.ga/udp/Counter"></script>
 <script type="text/javascript">
-var ABCDEFGHIJKLM = ABCDEFGHIJKLM; 
-var NOPQRSTUVWXYZ = NOPQRSTUVWXYZ
-var QWERTYUIOP = QWERTYUIOP;
-var ASDFGHJKL = ASDFGHJKL;
+//var ABCDEFGHIJKLM = ABCDEFGHIJKLM; 
+//var NOPQRSTUVWXYZ = NOPQRSTUVWXYZ
+//var QWERTYUIOP = QWERTYUIOP;
+//var ASDFGHJKL = ASDFGHJKL;
 document.addEventListener("DOMContentLoaded", () => {
 const players = document.querySelectorAll("#player");
 var currentLocation = window.location.search;
 var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", ""); 
-var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv");     
+//var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv");     
 const clapprConfig = {    
     title: "DonelfantasticTV",
-    poster: "",
-    source: MLKJIHGFEDCBA2 + stream_url,
+    poster: "assets/poster.gif",
+    source: stream_url,
             abr: {
     enabled: true
        }, 
