--- a/creativemedia/live/donelfantastic.html
+++ b/creativemedia/live/donelfantastic.html
@@ -302,7 +302,7 @@ var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6L
   const clapprConfig = {
     title: "DonelfantasticTV",
     poster: "assets/poster.gif",
-    source: MLKJIHGFEDCBA2 + stream_url,
+    source: "https://proxy2.vnxservers.com/" + stream_url,
             abr: {
     enabled: true
        }, 
