--- a/creativemedia/live/donelfantasticTV2.html
+++ b/creativemedia/live/donelfantasticTV2.html
@@ -191,7 +191,7 @@
     </div>
   <nav class="my-nav">
   <ul>
-    <li class="my-tv"><a href="//donelfantastic.github.io/creativemedia/live/">MENU<i class="fa fa-list" aria-hidden="true"></i></a></li>
+    <li class="my-tv"><a href="//donelfantastic.github.io/creativemedia/live/">MENU<i class="fa fa-tv" aria-hidden="true"></i></a></li>
   </ul>
 </nav>  
     <div class="container-fluid">
