--- a/creativemedia/live/donelfantasticTV.html
+++ b/creativemedia/live/donelfantasticTV.html
@@ -301,7 +301,7 @@ var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6X
   const clapprConfig = {
     title: "DonelfantasticTV",
     poster: "",
-    source: MLKJIHGFEDCBA2 + stream_url,
+    source: "https:\/\/cors.plus\/" + stream_url,
             abr: {
     enabled: true
        }, 
