--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="Nella Kharisma, Dory Harsa, NELLA, DORY, donelfans, nellalovers, nella kharisma lovers, rencang dory, sahabat dory, fans">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Donelfantastic">
+  <link rel="icon" href="assets/icondf.png" type="image/png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'/>
   <link rel="stylesheet" href="./src/min.style.css"/>
