--- a/creativemedia/tv/index.html
+++ b/creativemedia/tv/index.html
@@ -12,11 +12,12 @@
   <meta http-equiv="pragma" content="no-cache" />
   <meta name="referrer" content="no-referrer">
   <meta name="robots" content="noindex" />
+  <link rel="icon" href="assets/icondf.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all">
-  <link rel="stylesheet" href="src/style.min.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
+  <link rel="stylesheet" href="src/style.min.css" />
 </head>
 <body oncontextmenu="return false;">
   <div class="wrapper">
