--- a/creativemedia/tv/index.html
+++ b/creativemedia/tv/index.html
@@ -21,6 +21,21 @@
 </head>
 <body oncontextmenu="return false;">
   <div class="wrapper">
+    
+    <!--// Start of Video Popup //-->
+  <span class="video-popup">
+    <span class="iframe-wrapper"> 
+      <div class="vid-player responsive-vid">
+      <iframe class="iframeHolder" id="iframeHolder" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      <p>Your browser does not support iframes.</p>
+    </iframe></div>
+      <span class="close-video">
+        <span class="video-close-icon">             </span>
+      </span>
+    </span>
+   </span>
+    <!--// end of video popup //-->
+    
     <div id="banner">
       <center>
         <div class="logo"><a href="https://donelfantastic.github.io"><img src="assets/donelfantastic_header.png"></img></a></div>
