--- a/embed/plyrMNC.html
+++ b/embed/plyrMNC.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="robots" content="noindex" />
   <meta name="referrer" content="never" />
-  <title>DONELFANTASTIC | MNCTV</title>
+  <title>Donelfantastic</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.12/plyr.min.css" />
   <style>
     * {
