--- a/creativemedia/tv/donelfantasticTV.html
+++ b/creativemedia/tv/donelfantasticTV.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>DonelfantasticTV</title>
+  <title>Donelfantastic</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -300,7 +300,7 @@ var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "
 //var MLKJIHGFEDCBA2 = atob("aHR0cHM6Ly9wcm94eTIudm54c2VydmVycy5jb20v", "aHR0cHM6XC9cL3Byb3h5Mi52bnhzZXJ2ZXJzLmNvbVwv");  
 //var MLKJIHGFEDCBA3 = "";  
   const clapprConfig = {
-    title: "DonelfantasticTV",
+    title: "Donelfantastic",
     poster: "",
     source: stream_url,
             abr: {
