--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="Donel Fantastic">
+  <meta name="title" content="Donelfantastic Official">
   <meta name="description" content="Donelfantastic site official">
   <meta name="keywords" content="Nella Kharisma, Dory Harsa, NELLA, DORY, donelfans, nellalovers, nella kharisma lovers, rencang dory, sahabat dory, fans">
   <meta name="robots" content="index, follow">
@@ -87,7 +87,7 @@
   <figure></figure>
   <figure></figure>
   <figure></figure>    
-    <div class="logo"><a title="back to homepage" href="#"><img src="https://yt3.googleusercontent.com/2pvmjo54veHM0j6SN4bqILonRwkIZUy6cXCCVhnqw_0xHUsLRME8zdUf_Koi8_atOidTL7yV=w2120-fcrop64=1,00005a57ffffa5a8-k-c0xffffffff-no-nd-rj"></img></a></div>
+    <div class="logo"><a title="back to homepage" href="#"><img src="assets/donelfantastic_header.png"></img></a></div>
   
   <nav class="my-nav">
   <ul>
