--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
   <nav class="my-nav">
   <ul>
     <li class="my-home"><a href="/">Home<i class="fa fa-home" aria-hidden="true"></i></a></li>
-    <li class="my-event"><a href="#serv">Events<i class="fa fa-calendar" aria-hidden="true"></i></a></li>
+    <li class="my-event"><a href="./galery.html">Galery<i class="fa fa-camera" aria-hidden="true"></i></a></li>
     <li class="my-music"><a href="#ytpl-player1">Music<i class="fa fa-music" aria-hidden="true"></i></a></li>
     <li class="my-info"><a href="#small">Follow Us<i class="fa fa-info" aria-hidden="true"></i></a></li>
-    <li class="my-tv"><a href="./creativemedia/tv/index">Online TV<i class="fa fa-tv" aria-hidden="true"></i></a></li>
+    <li class="my-tv"><a href="./creativemedia/tv/index.html">Online TV<i class="fa fa-tv" aria-hidden="true"></i></a></li>
   </ul>
 </nav>
   
