--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <li class="my-home"><a href="/">Home<i class="fa fa-home" aria-hidden="true"></i></a></li>
     <li class="my-event"><a href="./galery">Galery<i class="fa fa-camera" aria-hidden="true"></i></a></li>
     <li class="my-music"><a href="#ytpl-player1">Music<i class="fa fa-music" aria-hidden="true"></i></a></li>
-    <li class="my-info"><a href="#small">Follow Us<i class="fa fa-group" aria-hidden="true"></i></a></li>
+    <li class="my-info"><a href="#small">Follow<i class="fa fa-users" aria-hidden="true"></i></a></li>
     <li class="my-tv"><a href="./creativemedia/tv/index">Online TV<i class="fa fa-tv" aria-hidden="true"></i></a></li>
   </ul>
 </nav>
