--- a/bitmovVOD.html
+++ b/bitmovVOD.html
@@ -351,10 +351,10 @@
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
 
   var source = {
-   progressive:"https://www.vidio.com/videos/7551235/common_tokenized_playlist.m3u8",
-    poster:"https://raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif",   
+   progressive:"https://donelfantastic.github.io/live/ssportsNZ.m3u8",
+    poster:"//raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif",   
   };
-  //https://www.vidio.com/videos/7551235/common_tokenized_playlist.m3u8
+ 
   var player = new bitmovin.player.Player(container, config);
   player.load(source).then(
     //player.setup(config).then(
