--- a/creativemedia/tv/index.html
+++ b/creativemedia/tv/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="pragma" content="no-cache" />
   <meta name="referrer" content="no-referrer">
   <meta name="robots" content="noindex" />
-  <link rel="icon" href="assets/favicon/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="assets/favicon/android-chrome-512x512.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
