--- a/donel-music.html
+++ b/donel-music.html
@@ -16,10 +16,6 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
   <link rel="stylesheet" href="./src/latest/style.css"/>
 </head>
-<div class="bg-video-wrap">
-  <video src="//drive.google.com/uc?export=view&id=1S2Hv1SNU8lXAxvKXxPGFhch0f4L_OTEE" loop autoplay>
-  </video>
-</div>
 <body>
   
   <div class="toggle-nav"></div>
@@ -58,6 +54,75 @@
     </a>
   </nav>
   </div>
+  <div class="container-playlist">
+    <h5 class="df_title">NELLA<span> KHARISMA OFFICIAL</span></h5>
+
+    <div class="ypt_wrapper">
+      <div class="video embed-container">
+        <div id="ytpl-player1" data-nk="PLQVDVegXmBRqa3g92vhejz6SfPoxtxYlf"></div>
+      </div>
+      <div>
+        <h2 id="ytpl-title"></h2>
+        <div id="ytpl-desc"></div>
+      </div>
+      <div class="ytpl-flexslider">
+        <ul id="ytpl-thumbs" class="ytpl--thumbs slides"></ul>
+      </div>
+    </div>
+  </div>
+  <div class="nine columns main-col">
+    <div class="freedom">      
+          <p>Description:</p>
+      <div class="bob" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 100%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+        <p>Contact Person For Job : +62 812-8650-9360</p>
+        <p>Copyright © Nella Kharisma Official All rights reserved.</br></p>
+      </div>
+
+      <div class="container-playlist">
+        <h5 class="df_title">DORY<span> HARSA MUSIC</span></h5>
+
+        <div class="ypt_wrapper">
+          <div class="video embed-container">
+            <div id="ytpl-player2" data-dh="PL8y8dCpMFEe_mUxf2tVMrPjlkAQvDLW2V"></div>
+          </div>
+          <div>
+            <h2 id="ytpl-title"></h2>
+            <div id="ytpl-desc"></div>
+          </div>
+          <div class="ytpl-flexslider">
+            <ul id="ytpl-thumbs" class="ytpl--thumbs slides"></ul>
+          </div>
+        </div>
+      </div>
+     
+          <p>Description:</p>
+      <div class="bob" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 100%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+        <p>Contact Person For Job : +62 813-3495-7744 (Official Dory Harsa)</p>
+        <p>Copyright © Dory Harsa Music All rights reserved.</p>
+      </div>
+
+      <div class="container-playlist">
+        <h5 class="df_title">INFINITY<span> MUSIC</span></h5>
+
+        <div class="ypt_wrapper">
+          <div class="video embed-container">
+            <div id="ytpl-player3" data-im="PL7yprDMdAn3ZoaBsOPdUe1kD7q3HbM0TA"></div>
+          </div>
+          <div>
+            <h2 id="ytpl-title"></h2>
+            <div id="ytpl-desc"></div>
+          </div>
+          <div class="ytpl-flexslider">
+            <ul id="ytpl-thumbs" class="ytpl--thumbs slides"></ul>
+          </div>
+        </div>
+      </div>
+      
+          <p>Description:</p>
+      <div class="bob" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 100%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+        <p>Copyright © Infinity Music All rights reserved.</p><br></br>
+      </div>
+
   <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
     <div class="social-panel">
