--- a/index.html
+++ b/index.html
@@ -31,27 +31,27 @@
       <span class="nav__title" data-title="home">Home</span>
       <span class="nav__subtitle">Donelfantastic</span>
     </a>
-    <a href="//donelfantastic.github.io/donel-gallery" class="nav__item">
+    <a href="./donel-gallery" class="nav__item">
       <img src="//donelfantastic.github.io/assets/photo/onstage_1.jpg" class="nav__image">
       <span class="nav__title" data-title="gallery">Gallery</span>
       <span class="nav__subtitle">My Gallery</span>
     </a>
-    <a href="//donelfantastic.github.io/donel-music" class="nav__item">
+    <a href="./donel-music" class="nav__item">
       <img src="//donelfantastic.github.io/assets/photo/donel_3.png" class="nav__image">
       <span class="nav__title" data-title="music">Music</span>
       <span class="nav__subtitle">My Music</span>
     </a>
-    <a href="//donelfantastic.github.io/donel-tv" class="nav__item">
+    <a href="./donel-tv" class="nav__item">
       <img src="//donelfantastic.github.io/assets/photo/onstage.png" class="nav__image">
       <span class="nav__title" data-title="tv">Tv</span>
       <span class="nav__subtitle">My TV</span>
     </a>
-    <a href="//donelfantastic.github.io/donel-disclaimer" class="nav__item">
+    <a href="./donel-disclaimer" class="nav__item">
       <img src="//donelfantastic.github.io/assets/photo/donel_2.png" class="nav__image">
       <span class="nav__title" data-title="disclaimer">Disclaimer</span>
       <span class="nav__subtitle">Site Disclaimer</span>
     </a>
-    <a href="//donelfantastic.github.io/donel-about-us" class="nav__item">
+    <a href="./donel-about-us" class="nav__item">
       <img src="//donelfantastic.github.io/assets/photo/onstage_2.jpg" class="nav__image">
       <span class="nav__title" data-title="about">About</span>
       <span class="nav__subtitle">About Us</span>
@@ -62,7 +62,7 @@
   <div class="social-panel-container">
     <div class="social-panel">
       <p>Donelfantastic<i class="fa fa-copyright"></i>2023 -
-        <a target="_blank" href="https://codepen.io">2024</a>
+        <a target="_blank" href="https://donelfantastic.github.io">2024</a>
       </p>
       <button class="close-btn"><i class="fas fa-times"></i></button>
       <h4>follow us on</h4>
