--- a/donel-music.html
+++ b/donel-music.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donelfantastic Official</title>
   <meta name="description" content="Donelfantastic site official">
   <meta name="keywords" content="Nella Kharisma, Dory Harsa, NELLA, DORY, donelfans, nellalovers, nella kharisma lovers, rencang dory, sahabat dory, fans">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Donelfantastic">
   <link rel="icon" href="assets/favicon.png" type="image/png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
