--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
   <link rel="stylesheet" href="./src/latest/style.css"/>
 </head>
-<div class="bg-video-wrap">
-  <video src="//drive.google.com/uc?export=view&id=1RxBPzmIrlHA3Zj2VfKhS7CTI6Xguaf4G" loop autoplay>
+<video class="bg-video-wrap" loop autoplay>
+  <source src="//drive.google.com/uc?export=view&id=1S2Hv1SNU8lXAxvKXxPGFhch0f4L_OTEE">
   </video>
-</div>
 <body>
   
   <div class="toggle-nav"></div>
