--- a/donel-tv.html
+++ b/donel-tv.html
@@ -78,7 +78,7 @@
     <section class="content-area">
       <div class="table-area">
         <div id="display-number"></div>
-          <div id="display-resources" style="overflow-x: auto; padsing-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
+          <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:15px;padding-right:15px;"></div>
         </div>
     </section>
   </div>
