--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -69,14 +69,30 @@
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_2.jpg' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_2.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_2.jpg'></div>
 </div>
 
-<!-- Mixed gallery -->
+<!-- Mixed gallery1 -->
+<div class='gallery'>
+	<!-- Pt a1 -->
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a1.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a1.jpg' data-swgl-label="lightbox-example-1"></div>
+	<!-- Pt a2 -->
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a2.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a2.jpg' data-swgl-label="lightbox-example-1"></div>
+	<!-- Pt a3 -->
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a3.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a3.jpg' data-swgl-label="lightbox-example-1"></div>
+	<!-- Pt a4 -->
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a4.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a4.jpg' data-swgl-label="lightbox-example-1"></div>
+		<!-- Pt a5 -->
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a5.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a5.jpg' data-swgl-label="lightbox-example-1"></div>
+		<!-- Pt a6 -->
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a6.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a6.jpg' data-swgl-label="lightbox-example-1"></div>
+</div>
+
+<!-- Mixed gallery2 -->
 <div class='gallery'>
 	<!-- Pt 1 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/donelfantastic12.png' data-swgl-src='https://donelfantastic.github.io/assets/donelfantastic12.png' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/donelfantastic12.png' data-swgl-src='https://donelfantastic.github.io/assets/donelfantastic12.png' data-swgl-label="lightbox-example-2"></div>
 	<!-- Pt 2 -->
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/donelfantastic11.png' data-swgl-src='https://donelfantastic.github.io/assets/donelfantastic11.png' data-swgl-label="lightbox-example-2"></div>
 	<!-- Pt 3 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/donelfantastic10.jpg' data-swgl-src='https://donelfantastic.github.io/assets/donelfantastic10.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/donelfantastic10.jpg' data-swgl-src='https://donelfantastic.github.io/assets/donelfantastic10.jpg' data-swgl-label="lightbox-example-2"></div>
 	<!-- Pt 4 -->
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/donelfantastic9.jpg' data-swgl-src='https://donelfantastic.github.io/assets/donelfantastic9.jpg' data-swgl-label="lightbox-example-2"></div>
 </div>
