--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
-  <link rel="stylesheet" href="./src/latest/style.css"/>
+  <link rel="stylesheet" href="./src/latest/style.min.css"/>
 </head>
 <video class="bg-video-wrap" loop autoplay>
   <source src="//drive.google.com/uc?export=view&id=1S2Hv1SNU8lXAxvKXxPGFhch0f4L_OTEE">
