--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -74,15 +74,15 @@
 	<!-- Pt a1 -->
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a1.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a1.jpg' data-swgl-label="lightbox-example-1"></div>
 	<!-- Pt a2 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a2.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a2.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a2.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a2.jpg' data-swgl-label="lightbox-example-1"></div>
 	<!-- Pt a3 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a3.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a3.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a3.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a3.jpg' data-swgl-label="lightbox-example-1"></div>
 	<!-- Pt a4 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a4.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a4.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a4.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a4.jpg' data-swgl-label="lightbox-example-1"></div>
 		<!-- Pt a5 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a5.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a5.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a5.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a5.jpg' data-swgl-label="lightbox-example-1"></div>
 		<!-- Pt a6 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a6.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a6.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a6.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a6.jpg' data-swgl-label="lightbox-example-1"></div>
 </div>
 
 <!-- Mixed gallery2 -->
