--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -72,7 +72,7 @@
 <!-- Mixed gallery1 -->
 <div class='gallery'>
 	<!-- Pt a1 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/a1.jpg' data-swgl-src='https://donelfantastic.github.io/assets/a1.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a1.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a1.jpg' data-swgl-label="lightbox-example-1"></div>
 	<!-- Pt a2 -->
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a2.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a2.jpg' data-swgl-label="lightbox-example-1"></div>
 	<!-- Pt a3 -->
