--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
   <link rel="stylesheet" href="./src/latest/style.css"/>
 </head>
-  <video class="bg-video-wrap" poster="./assets/donelfantastic12.png" loop autoplay>
+  <video class="bg-video-wrap" poster="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@main/assets/donelfantastic12.png" loop autoplay>
   <source src="//drive.google.com/uc?export=view&id=1TFOZY-FCxcDVs0m7oG6Hc3yzG6hImh4I" type="video/mp4">
   </video>
 <!--// 
