--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -76,6 +76,9 @@
   <div class="container-fluid"></div>
     <h5 class="df_title">DONEL<span>TV</span></h5>
     <section class="content-area">
+      <div id="wrapper">
+<a href="./donel-tv"><button class="animated-button"><i class="fas fa-tv"></i>WORLD TV</button></a><span>
+<a href="./donel-tv-localidn"><button class="animated-button"><i class="fas fa-tv"></i>LOCAL TV</button></a></span></div> 
       <div class="table-area">
         <div id="display-number"></div>
           <div id="display-resources" style="overflow-x: auto; padsing-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
