--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -59,6 +59,9 @@
         <div class="table-area">
           <!-- my gallery -->
 <div class='gallery'>
+
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_5.png' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_5.png' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_5.png'></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_4.png' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_4.png' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_4.png'></div>
 	<!-- pt 1 -->
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_2.jpg' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_2.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_2.jpg'></div>
 	<!-- pt 2 -->
@@ -66,7 +69,7 @@
 	<!-- Pt 3 -->
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage.png' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage.png' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage.png'></div>
 	<!-- Pt 4 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_3.jpg' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_3.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_3.jpg'></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_3.png' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_3.png' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_3.png'></div>
 </div>
 
 <!-- Mixed gallery1 -->
